# learning-cmake

./: CMakeLists.txt  README.md  hello.cpp  hello.hpp  main.cpp
hello-exe/: CMakeLists.txt  main.cpp
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp
